Update: Introduce BMAD Installation Guide and enhance documentation accessibility
- Completed Story 0.13: Integrated the BMAD installation guide into the app's guide system, making it accessible at `/guides/bmad-installation`.
- Converted the installation guide from markdown to JSON format for better structure and searchability.
- Updated locale files to include the new guide in the core category, ensuring it is featured and easily discoverable.
- Enhanced existing documentation to reflect the new guide's availability and improve user experience.

--- a/src/content/locale/he/guides/index.json
+++ b/src/content/locale/he/guides/index.json
@@ -1,5 +1,17 @@
 [
   {
+    "id": "bmad-installation",
+    "title": "מדריך התקנה BMAD 6",
+    "description": "מדריך קצר וברור להתקנת BMAD METHOD - סביבת פיתוח מונחית AI. תהליך פשוט שלב אחר שלב שלוקח כ-15 דקות.",
+    "category": "core",
+    "difficulty": "beginner",
+    "estimatedMinutes": 15,
+    "icon": "IconDownload",
+    "tags": ["התקנה", "bmad", "setup", "getting-started", "cursor"],
+    "path": "core/bmad-installation.json",
+    "featured": true
+  },
+  {
     "id": "quick-start",
     "title": "התחלה מהירה ל-BMAD-METHOD",
     "description": "מדריך 15 דקות שיעזור לכם להבין מה זה BMAD ולהתחיל להשתמש בו - ללא ידע טכני מוקדם. הסבר פשוט על מה זה BMAD, למה זה שימושי, והתקנה ב-3 צעדים.",
